--- a/code/lumina.css
+++ b/code/lumina.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 body {
 	background-color:#FCEBB6;
-	background-image:url("../../Library/CloudStorage/OneDrive-Personal/UWG/Fall 2023/Comp 2100 Web Development/Lebrun javajam4 Coffee Bar/javajam/images/fadedroad50.jpg");
+/*	background-image:url("../../Library/CloudStorage/OneDrive-Personal/UWG/Fall 2023/Comp 2100 Web Development/Lebrun javajam4 Coffee Bar/javajam/images/fadedroad50.jpg");*/
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
@@ -59,6 +59,13 @@ img {
 	padding-right: 10px;
 		
 	}
+.img_hlp_grpelders{
+	float: right;
+}
+.position_center{
+	position: absolute;
+	width: 70%
+}
 #homehero {
 		height: 300px;
 		background-image:url("../../Library/CloudStorage/OneDrive-Personal/UWG/Fall 2023/Comp 2100 Web Development/Lebrun javajam4 Coffee Bar/javajam/images/hero.jpg");
@@ -75,10 +82,10 @@ footer {
 		border-top: 2px #8C3826 solid;
 	}
 #wrapper {
-	min-width: 900px;
-	max-width: 120px;
-	box-shadow: 3px 3px 3px #676767;
-	width: 80%;
+/*	min-width: 900px;*/
+/*	max-width: 120px;*/
+/*	box-shadow: 3px 3px 3px #676767;*/
+/*	width: 80%;*/
 	background-color: #A5ACC3;
 	margin-right: auto;
 	margin-left: auto;
