--- a/code/lumina.css
+++ b/code/lumina.css
@@ -77,9 +77,10 @@ footer {
 		background-color: #23E882;
 		font-size: 0.60em;
 		font-style: italic;
-		text-align: center;
+		text-align: left;
 		padding: 1em;
 		border-top: 2px #8C3826 solid;
+		float: left;
 	}
 #wrapper {
 /*	min-width: 900px;*/
