--- a/code/lumina.css
+++ b/code/lumina.css
@@ -66,6 +66,15 @@ img {
 	position: absolute;
 	width: 70%
 }
+.footer{
+	background-color: #23E882;
+		font-size: 0.60em;
+		font-style: ;
+		text-align: left;
+		padding: 1em;
+		border-top: 2px #8C3826 solid;
+		float: left;
+}
 #homehero {
 		height: 300px;
 		background-image:url("../../Library/CloudStorage/OneDrive-Personal/UWG/Fall 2023/Comp 2100 Web Development/Lebrun javajam4 Coffee Bar/javajam/images/hero.jpg");
@@ -73,6 +82,7 @@ img {
 		background-repeat: no-repeat;
 	}
 
+/*
 footer {
 		background-color: #23E882;
 		font-size: 0.60em;
@@ -82,6 +92,7 @@ footer {
 		border-top: 2px #8C3826 solid;
 		float: left;
 	}
+*/
 #wrapper {
 /*	min-width: 900px;*/
 /*	max-width: 120px;*/
