--- a/code/lumina.css
+++ b/code/lumina.css
@@ -69,7 +69,7 @@ img {
 .footer{
 	background-color: #23E882;
 		font-size: 0.60em;
-		font-style: ;
+		font-style: normal;
 		text-align: left;
 		padding: 1em;
 		border-top: 2px #8C3826 solid;
