--- a/code/lumina.css
+++ b/code/lumina.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 body {
 	background-color:#FCEBB6;
-/*	background-image:url("../../Library/CloudStorage/OneDrive-Personal/UWG/Fall 2023/Comp 2100 Web Development/Lebrun javajam4 Coffee Bar/javajam/images/fadedroad50.jpg");*/
+	background-image:url("../../Library/CloudStorage/OneDrive-Personal/UWG/Fall 2023/Comp 2100 Web Development/Lebrun javajam4 Coffee Bar/javajam/images/fadedroad50.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
@@ -61,11 +61,18 @@ img {
 	}
 .img_hlp_grpelders{
 	float: right;
+	border-right-color: darkviolet;
+	border-radius: 100px;
 }
+section{
+	margin-right: 100px;
+}
+/*
 .position_center{
 	position: absolute;
 	width: 70%
 }
+*/
 .footer{
 	background-color: #23E882;
 		font-size: 0.60em;
@@ -82,7 +89,6 @@ img {
 		background-repeat: no-repeat;
 	}
 
-/*
 footer {
 		background-color: #23E882;
 		font-size: 0.60em;
@@ -90,9 +96,9 @@ footer {
 		text-align: left;
 		padding: 1em;
 		border-top: 2px #8C3826 solid;
-		float: left;
+		margin-right: 0;
+/*		float: left;*/
 	}
-*/
 #wrapper {
 /*	min-width: 900px;*/
 /*	max-width: 120px;*/
