--- a/code/lumina.css
+++ b/code/lumina.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /* CSS Document */
 body {
-	background-color:#FCEBB6;
+	background-color:#A5ACC3;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
@@ -9,7 +9,7 @@ body {
 	font-family: Tahoma, Arial, Helvetiva;
 }
 header {
-	background-color: #D2B48C;
+	background-color: #A5ACC3;
 	color: #8C3826;	
 	text-align: center;
 	padding-top: 5px;
@@ -34,7 +34,7 @@ h4 {
 		padding-bottom: .25em;
 	}
 nav { 
-		font-size: 1.5em;
+	font-size: 1.5em;
 		padding-top: 5px;
 		padding-bottom: 5px;
 		font-weight: bold;
@@ -74,19 +74,31 @@ img {
 		float: left;
 }
 .textbox-footer{
-	background-color:dodgerblue;
+/*	background-color:dodgerblue;*/
 }
 
 
 footer {
+/*
 		background-color: #23E882;
 		font-size: 0.60em;
 		font-style: italic;
 		text-align: left;
 		padding: 1em;
-		border-top: 2px #8C3826 solid;
 		margin-right: 0;
+*/
 /*		float: left;*/
+	border-radius: 10px;
+	background-color: #23e882;
+	border: 1px solid rgba(0, 0, 0, 0.2);
+	overflow: hidden;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	padding: 10px 20px;
+	gap: 45px;
+	color: #b41218;
 	}
 #wrapper {
 /*	min-width: 900px;*/
