--- a/code/lumina.css
+++ b/code/lumina.css
@@ -12,8 +12,8 @@ header {
 	background-color: #A5ACC3;
 	color: #8C3826;	
 	text-align: center;
-	padding-top: 5px;
-	padding-bottom: 5px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 h1 {
 	font-size: 3em;
@@ -36,9 +36,21 @@ h4 {
 	}
 nav { 
 /*	font-size: 1.5em;*/
-		padding-top: 30px;
-		padding-bottom: 30px;
-/*		text-align: center;*/
+	padding-top: 10px;
+	padding-bottom: 10px;
+	gap: 10px;
+/*	text-align: center;*/
+	justify-content: center;
+	
+/*	height: 85px;*/
+overflow: hidden;
+flex-shrink: 0;
+display: flex;
+flex-direction: row;
+align-items: flex-start;
+
+/*gap: 20px;*/
+/*font-size: 14px;*/
 		}
 nav a { 
 		text-decoration: none;
