--- a/code/lumina.css
+++ b/code/lumina.css
@@ -75,40 +75,32 @@ main {
   gap: 15px;               
   padding: 10px;   
 }
-.textbox-footer{
-	display: flex;
-	align-items: center;
-/*	justify-content: center;*/
-	gap: .5px;
-	padding: 10px;   
-}
+
 .details {
 	padding-left: 20%;
 	padding-right: 20%;
 	}
+/*
 img {
 	padding-left: 10px;
 	padding-right: 10px;
 		
 	}
+*/
 .img_hlp_grpelders{
 	float: right;
 	margin: 10px;
+	margin-left: 10000;
 }
 
 .img_hlp_grpelders img {
   width: 800px;
   height: auto;
+	border-radius: 10px;
+	
 }
-
-.footer{
-	background-color: #23E882;
-		font-size: 0.60em;
-		font-style: normal;
-		text-align: left;
-		padding: 1em;
-		border-top: 10px #8C3826 solid;
-		float: left;
+.left-colmn-content{
+	float: left;
 }
 .callToAction-home-link-button{
 	font-weight: bold;
@@ -152,7 +144,24 @@ img {
 		text-align: left;
 		float: center;
 }
-
+.textbox-footer{
+	display: flex;
+	align-items: center;
+/*	justify-content: center;*/
+	gap: .5px;
+	padding: 10px; 
+}
+.footer{
+/*	background-color: #23E882;*/
+/*
+		font-size: 0.60em;
+		font-style: normal;
+		text-align: left;
+*/
+/*		padding: 1em;*/
+/*		border-top: 10px #8C3826 solid;*/
+/*		float: left;*/
+}
 footer {
 /*
 		background-color: #23E882;
@@ -167,17 +176,17 @@ footer {
 	background-color: #23e882;
 	border: 1px solid rgba(0, 0, 0, 0.2);
 	overflow: hidden;
-	display: flex;
+	display: center;
 	flex-direction: row;
 	align-items: center;
 	justify-content: center;
-	padding: 10px 20px;
-	gap: 45px;
+/*	padding: 10px 20px;*/
+/*	gap: 45px;*/
 	color: #b41218;
 	}
 #wrapper {
 	min-width: 900px;
-	min-height: inherit;
+	min-height: 875px;
 /*	max-width: 120px;*/
 /*	box-shadow: 3px 3px 3px #676767;*/
 /*	width: 80%;*/
