--- a/code/lumina.css
+++ b/code/lumina.css
@@ -147,8 +147,8 @@ img {
 .textbox-footer{
 	display: flex;
 	align-items: center;
-/*	justify-content: center;*/
-	gap: .5px;
+	justify-content: center;
+	gap: 20px;
 	padding: 10px; 
 }
 .footer{
@@ -163,15 +163,7 @@ img {
 /*		float: left;*/
 }
 footer {
-/*
-		background-color: #23E882;
-		font-size: 0.60em;
-		font-style: italic;
-		text-align: left;
-		padding: 1em;
-		margin-right: 0;
-*/
-/*		float: left;*/
+
 	border-radius: 10px;
 	background-color: #23e882;
 	border: 1px solid rgba(0, 0, 0, 0.2);
@@ -180,8 +172,6 @@ footer {
 	flex-direction: row;
 	align-items: center;
 	justify-content: center;
-/*	padding: 10px 20px;*/
-/*	gap: 45px;*/
 	color: #b41218;
 	}
 #wrapper {
