--- a/code/lumina.css
+++ b/code/lumina.css
@@ -35,23 +35,16 @@ h4 {
 		padding-bottom: .25em;
 	}
 nav { 
-/*	font-size: 1.5em;*/
 	padding-top: 10px;
 	padding-bottom: 10px;
 	gap: 10px;
-/*	text-align: center;*/
 	justify-content: center;
-	
-/*	height: 85px;*/
-overflow: hidden;
-flex-shrink: 0;
-display: flex;
-flex-direction: row;
-align-items: flex-start;
-
-/*gap: 20px;*/
-/*font-size: 14px;*/
-		}
+	overflow: hidden;
+	flex-shrink: 0;
+	display: flex;
+	flex-direction: row;
+	align-items: flex-start;
+	}
 nav a { 
 		text-decoration: none;
 		}
@@ -80,24 +73,16 @@ main {
 	padding-left: 20%;
 	padding-right: 20%;
 	}
-/*
-img {
-	padding-left: 10px;
-	padding-right: 10px;
-		
-	}
-*/
-.img_hlp_grpelders{
+
+.left-colmn-content{
+}
+.img_hlp_grpelders img {
 	float: right;
 	margin: 10px;
 	margin-left: 10000;
-}
-
-.img_hlp_grpelders img {
-  width: 800px;
-  height: auto;
+  	width: 800px;
+ 	height: auto;
 	border-radius: 10px;
-	
 }
 .left-colmn-content{
 	float: left;
@@ -127,6 +112,8 @@ img {
 	font-weight: bold;
 	background-color: #B41319;
 	border-radius: 8px;
+	box-sizing: border-box;
+	border: 2px solid #C6C6C6;
 	color: white;
 	padding: 2em;
 		font-size: 12px;
@@ -137,6 +124,8 @@ img {
 .callToAction-access-button{
 	background-color: #B41319;
 	border-radius: 8px;
+	box-sizing: border-box;
+	border: 2px solid #C6C6C6;
 	color: white;
 	padding: 2em;
 		font-size: 0.60em;
@@ -151,22 +140,11 @@ img {
 	gap: 20px;
 	padding: 10px; 
 }
-.footer{
-/*	background-color: #23E882;*/
-/*
-		font-size: 0.60em;
-		font-style: normal;
-		text-align: left;
-*/
-/*		padding: 1em;*/
-/*		border-top: 10px #8C3826 solid;*/
-/*		float: left;*/
-}
 footer {
-
 	border-radius: 10px;
+	box-sizing: border-box;
+	border: 2px solid #C6C6C6;
 	background-color: #23e882;
-	border: 1px solid rgba(0, 0, 0, 0.2);
 	overflow: hidden;
 	display: center;
 	flex-direction: row;
@@ -179,13 +157,8 @@ footer {
 	min-height: 875px;
 /*	max-width: 120px;*/
 /*	box-shadow: 3px 3px 3px #676767;*/
-/*	width: 80%;*/
 	background-color: #A5ACC3;
 	margin: 0 atuo;
-/*
-	margin-right: auto;
-	margin-left: auto;
-*/
 }
 
   
